--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.12.0"
 appcompat = "1.7.1"
+calendar = "2.8.0"
 hiltNavigationCompose = "1.2.0"
 zxing = "3.5.3"
 datastorePreferences = "1.1.7"
@@ -10,7 +11,7 @@ composeBom = "2025.08.00"
 material3AdaptiveNavigationSuite = "1.4.0-beta02"
 navigationCompose = "2.9.3"
 hilt = "2.57"
-ksp = "2.2.0-2.0.2"
+ksp = "2.2.10-2.0.2"
 
 [libraries]
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
@@ -18,6 +19,7 @@ androidx-datastore-preferences = { module = "androidx.datastore:datastore-prefer
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 androidx-material3-adaptive-navigation-suite = { module = "androidx.compose.material3:material3-adaptive-navigation-suite", version.ref = "material3AdaptiveNavigationSuite" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+calendar-compose = { module = "com.kizitonwose.calendar:compose", version.ref = "calendar" }
 google-zxing = { module = "com.google.zxing:core", version.ref = "zxing" }
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
